--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "final-form": "^4.20.1",
@@ -25,6 +26,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
     "typescript": "^4.2.2",
     "web-vitals": "^1.1.0"
   },
